# VTK_GUI

./: CMakeLists.txt  Percolation.vcxproj  Percolation.vcxproj.filters  README.md  ReadMe.txt  SideBySideRenderWindowsQt.cxx  SideBySideRenderWindowsQt.h  SideBySideRenderWindowsQt.ui  VTK_GUI_Qt.cxx  VTK_GUI_Qt.h  VTK_GUI_Qt.ui  VTK_GUI_QtDriver.cxx  gnuplot.txt  lattice.txt  main.cpp  position.txt  stdafx.cpp
data/: vtk_1.vtk  vtk_2.vtk  vtk_3.vtk
